--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,24 @@ header {
     background-color: #9cd6f4;
     height: 100px;
     background-image: url('../img/pattern.png');
-    background-size: contain;
+    background-size: 450px;
 }
 
 #logo {
-    height: 50px;
+    height: 35px;
+    padding-left: 225px;
+    padding-top: 40px;
+}
+
+.bot {
+    color: rgb(148, 147, 147)
+}
+
+.bot span {
+    color: #64dafa;
+}
+
+.foto {
+    height: 400px;
+    padding-top: 20px;
 }
